Zope Changes

  This file contains change information for the current Zope release.
  Change information for previous versions of Zope can be found in the
  file HISTORY.txt.

  Zope 2.10.5 (unreleased)

    Bugs fixed

      - Launchpad #147201: treat container-class in zope.conf as a string,
        making it possible to use types from extra products directories.

      - Collector #2358: backported fix making 'Products' package a real
        "namespace package" from the trunk.

      - Collector #2287: form ':record' objects did not implement enough of
        the mapping interface.

      - Collector #2352: fix in OFS.Traversable

      - Collector #2346: username logging in FCGI crashed the server

      - ZopePageTemplate's pt_edit did not recognize content type arguments
        which had a charset information included.

      - Collector #2332: SessionDataManger: don't swallow ConflictErrors

      - Collector #2339: ZPT: fixed unicode issue when using the 'structure'
        directive

      - Launchpad #151020: HTTP_CHAR_SET headers containing 'x-user-defined'
        caused a LookupError exception. Unknown encodings are from now on
        silently discarded.

  Zope 2.10.4 (2007/06/23)

    Other changes

      - updated to ZODB 3.7.1

      - updated to Zope 3.3.2

      - updated to Five 1.5.5

    Bugs fixed

      - Collector #1306: Missing acquisition context on local roles screen.

      - Collector #2153: Supporting unquoted cookies with spaces.

      - The REQUEST no longer accepts holds after it has been closed.

      - Collector #1441: WebDAV compatibility with Windows Web Folders
        restored by adding a configuration variable that controls the
        sending of the non-standard MS-Author-Via and Public
        headers. Thanks for PatrickD for the the hard work coming up
        with an initial patch.  
        (http://zope.org/Collectors/Zope/1441)

      - Fixed bug in ZPublisher.BaseRequest with persistent site managers. An