@@ -6,6 +6,13 @@ Zope Changes
 
   Zope 2.10.5 (unreleased)
 
+    Other changes
+
+      - Turned deprecation warnings for manage_afterAdd, manage_beforeDelete
+        and manage_afterClone methods into discouraged warnings. These methods
+        will not be removed in Zope 2.11, but stay for the foreseeable future.
+        Using events is still highly encouraged.
+
     Bugs fixed
 
       - Launchpad #147201: treat container-class in zope.conf as a string,
